--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
     background-color: #f3f2ef;
     display: flex;
     flex-direction: column;
+    width: 100%;
     
 }
 
@@ -11,4 +12,6 @@
     max-width: 1200px;
     margin-left: 20px;
     margin-right: 20px;
+   
+    justify-content: center;
 }
