--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,12 @@
 }
 
 .app__body{
+    width: 100%;
     display: flex;
     margin-top: 35px;
     max-width: 1200px;
     margin-left: 20px;
     margin-right: 20px;
-   
+    background-color: #f3f2ef;
     justify-content: center;
 }
